# prioriza

./: .env  README.md  gerar_vapid.py  index.html  main.py  package.json  prioriza.db  pyproject.toml  requirements  requirements.txt  site.webmanifest  sw.js
